# gammaray

./: .gitignore  .travis.yml  CMakeLists.txt  GammaRay.pri  GammaRay.pro  GammaRay.pro.user.16  GammaRay.pro.user.3.2-pre1  LICENSE.md  README.md  aboutdialog.cpp  aboutdialog.ui  array3d.cpp  array3d.h  bidistributionmodelingdialog.cpp  bidistributionmodelingdialog.h  cartesiangriddialog.cpp  cartesiangriddialog.ui  conanfile.py  creategriddialog.cpp  creategriddialog.ui  datafiledialog.cpp  datafiledialog.h  datafiledialog.ui  declusteringdialog.cpp  declusteringdialog.h  declusteringdialog.ui  displayplotdialog.cpp  displayplotdialog.h  displayplotdialog.ui  distributioncolumnrolesdialog.cpp  distributioncolumnrolesdialog.h  distributionmodelingdialog.cpp  distributionmodelingdialog.ui  filecontentsdialog.cpp  filecontentsdialog.ui  indicatorkrigingdialog.cpp  indicatorkrigingdialog.h  indicatorkrigingdialog.ui  krigingdialog.cpp  libCalcScripting.pro  (+28 more)
algorithms/: bootstrap.cpp  bootstrap.h  cart.cpp  cart.h  cartdecisionnode.cpp  cartleafnode.cpp  cartleafnode.h  cartnode.cpp  cartnode.h  cartsplitcriterion.cpp  cartsplitcriterion.h  decisiontree.cpp  decisiontree.h  ialgorithmdatasource.cpp  ialgorithmdatasource.h  randomforest.cpp  randomforest.h  randomforestclassification.cpp  randomforestclassification.h
art/: logo.odp
calculator/: calccodeeditor.cpp  calccodeeditor.h  calclinenumberarea.cpp  calclinenumberarea.h  calcresources.qrc  calcscripting.cpp  calcscripting.h  calculatordialog.cpp  calculatordialog.h  calculatordialog.ui  icalcproperty.cpp  icalcproperty.h  icalcpropertycollection.cpp  icalcpropertycollection.h  libCalcScriptingDefs.h  scripting.cpp
conan2_recipes/: build.py  ignored_package_paths.txt  package_paths_order.txt
conan2_recipes/vtk/9.3.1/: CMakeLists.txt  FindVTK.cmake  conandata.yml  conanfile.py  fix_compilation_with_gcc10.diff
conan2_recipes/vtk/9.3.1/test_package/: CMakeLists.txt  conanfile.py  test.cpp
data/: coal_imputation_MCMC.txt  uncond_SGSIM.grid
dialogs/: aboutdialog.cpp  aboutdialog.ui  automaticvarfitdialog.cpp  automaticvarfitdialog.h  automaticvarfitdialog.ui  automaticvarfitexperimentsdialog.cpp  automaticvarfitexperimentsdialog.h  automaticvarfitexperimentsdialog.ui  bidistributionmodelingdialog.cpp  bidistributionmodelingdialog.ui  cartesiangriddialog.h  cartesiangriddialog.ui  choosecategorydialog.cpp  choosecategorydialog.h  choosecategorydialog.ui  choosevariabledialog.cpp  choosevariabledialog.h  choosevariabledialog.ui  cokrigingdialog.cpp  cokrigingdialog.h  cokrigingdialog.ui  contactanalysisdialog.cpp  contactanalysisdialog.h  contactanalysisdialog.ui  creategriddialog.cpp  creategriddialog.h  creategriddialog.ui  datafiledialog.cpp  datafiledialog.h  datafiledialog.ui  declusteringdialog.ui  displayplotdialog.cpp  displayplotdialog.ui  distributioncolumnrolesdialog.ui  distributionmodelingdialog.h  distributionmodelingdialog.ui  driftanalysisdialog.cpp  driftanalysisdialog.h  driftanalysisdialog.ui  dynamicfaciesrelationshipdiagramdialog.cpp  (+108 more)
docs/: GammaRayManual.docx  Validation_GSLIB_SIM.pptx  figures.pptx
domain/: application.cpp  application.h  attribute.cpp  attribute.h  bivariatedistribution.cpp  bivariatedistribution.h  cartesiangrid.cpp  cartesiangrid.cpp~  cartesiangrid.h  categorydefinition.cpp  categorydefinition.h  categorypdf.cpp  categorypdf.h  datafile.cpp  datafile.h  distribution.cpp  distribution.h  distributioncolumn.cpp  distributioncolumn.h  experimentalvariogram.cpp  experimentalvariogram.h  faciestransitionmatrix.cpp  faciestransitionmatrix.h  file.cpp  file.h  geogrid.cpp  geogrid.h  gridfile.cpp  gridfile.h  normalvariable.cpp  normalvariable.h  objectgroup.cpp  objectgroup.h  plot.cpp  plot.h  pointset.cpp  pointset.h  project.cpp  project.h  projectcomponent.cpp  (+29 more)
exceptions/: externalprogramexception.h  invalidgslibdatafileexception.h  invalidmethodexception.h
geometry/: boundingbox.cpp  boundingbox.h  face3d.cpp  face3d.h  hexahedron.cpp  hexahedron.h  intersectionfinder.cpp  intersectionfinder.h  pyramid.cpp  pyramid.h  quadrilateral.cpp  quadrilateral.h  tetrahedron.cpp  tetrahedron.h  triangle.cpp  triangle.h  vector3d.cpp  vector3d.h
geostats/: automaticvariogramfitting.cpp  automaticvariogramfitting.h  contactanalysis.cpp  contactanalysis.h  datacell.cpp  datacell.h  driftanalysis.cpp  driftanalysis.h  experimentalvariogramparameters.cpp  experimentalvariogramparameters.h  fkestimation.cpp  fkestimation.h  fkestimationrunner.cpp  fkestimationrunner.h  geostatsutils.cpp  geostatsutils.h  gridcell.cpp  gridcell.h  ijkdelta.cpp  ijkdelta.h  ijkdeltascache.cpp  ijkdeltascache.h  ijkindex.cpp  ijkindex.h  indexedspatiallocation.cpp  indexedspatiallocation.h  matrix3x3.cpp  matrix3x3.h  matrixmxn.cpp  matrixmxn.h  mcmcdataimputation.cpp  mcmcdataimputation.h  mcrfsim.cpp  mcrfsim.h  ndvestimation.cpp  ndvestimation.h  ndvestimationrunner.cpp  ndvestimationrunner.h  nestedvariogramstructuresparameters.cpp  nestedvariogramstructuresparameters.h  (+30 more)
graphviz/: graphviz.cpp  graphviz.h
gs/: ghostscript.cpp  ghostscript.h
gslib/: gslib.cpp  gslib.h  gslibparametersdialog.cpp  gslibparametersdialog.h  gslibparametersdialog.ui  igslibparameterfinder.cpp  igslibparameterfinder.h  workerthread.cpp  workerthread.h
imagejockey/: ijabstractcartesiangrid.cpp  ijabstractcartesiangrid.h  ijabstractvariable.cpp  ijabstractvariable.h  ijexperimentalvariogramparameters.cpp  ijexperimentalvariogramparameters.h  ijmatrix3x3.cpp  ijmatrix3x3.h  ijresources.qrc  ijspatiallocation.cpp  ijspatiallocation.h  ijvariographicmodel2d.cpp  ijvariographicmodel2d.h  imagejockeydialog.cpp  imagejockeydialog.h  imagejockeydialog.ui  imagejockeygridplot.cpp  imagejockeygridplot.h  imagejockeysvdutils.cpp  imagejockeysvdutils.h  imagejockeyutils.cpp  imagejockeyutils.h  spectrogram1dparameters.cpp  spectrogram1dparameters.h  spectrogram1dplot.cpp  spectrogram1dplot.h  spectrogram1dplotpicker.cpp  spectrogram1dplotpicker.h  svdparametersdialog.cpp  svdparametersdialog.ui
spatialindex/: spatialindex.cpp  (+3 more)
(+508 files in other folders)
